--- a/styles/styles.css
+++ b/styles/styles.css
@@ -181,7 +181,7 @@ body {
 .navbar a:hover,
 .dropdown:hover .dropbtn {
   color: #4e3487;
-  animation: fadeIn 0.7s;
+  animation: fadeOut 0.1s;
 }
 
 .dropdown-content {
@@ -213,7 +213,7 @@ body {
 
 .dropdown-content a:hover {
   color: #4e3487;
-  animation: fadeIn 1s;
+  animation: fadeOut 0.1s;
 }
 
 .dropdown:hover .dropdown-content {
@@ -448,13 +448,13 @@ body {
 .activities-list-item:hover {
   color: #4e3487;
   cursor: pointer;
-  animation: fadeIn 1s;
+  animation: fadeOut 0.1s;
 }
 
 .activities-list-item:hover::before {
   color: #4e3487;
   cursor: pointer;
-  animation: fadeIn 1s;
+  animation: fadeOut 0.1s;
   content: "—";
 }
 
@@ -691,7 +691,7 @@ body {
 }
 .industries-block:hover .industries-block-title {
   color: #4e3487;
-  animation: fadeIn 1s;
+  animation: fadeOut 0.1s;
 }
 .industries-block:hover .icon-arrow-right::before {
   color: #4e3487;
@@ -811,12 +811,12 @@ body {
 
 .vacancy-block:hover .vacancy-title {
   color: #4e3487;
-  animation: fadeIn 1s;
+  animation: fadeOut 0.1s;
 }
 
 .vacancy-block:hover .block-arrow {
   color: #4e3487;
-  animation: fadeIn 1s;
+  animation: fadeOut 0.1s;
 }
 
 .vacancy-block:nth-child(even) {
@@ -1072,12 +1072,12 @@ body {
 
 .article-block:hover .article-title {
   color: #4e3487;
-  animation: fadeIn 1s;
+  animation: fadeOut 0.1s;
 }
 
 .article-block:hover .block-arrow {
   color: #4e3487;
-  animation: fadeIn 1s;
+  animation: fadeOut 0.1s;
 }
 
 .article-block:nth-child(even) {
@@ -1245,6 +1245,7 @@ body {
 
 .columns-wrap {
   display: flex;
+  flex-direction: column;
   gap: 20px;
 }
 
@@ -1588,4 +1589,135 @@ body {
   font-size: 40px;
   transform: rotate(90deg);
   width: 10%;
+}
+
+/*------- FIND SPEC FORM SERV BLOCK -------*/
+
+.forms-bg-violet {
+  background: linear-gradient(90deg, #4e3487 0%, #2e85aa 100%);
+  box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
+
+.spec-find-form-serv-wrap {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 60px 40px 40px 40px;
+}
+
+.spec-find-serv-text {
+  width: 85%;
+}
+
+.find-spec-form-wrap {
+  margin-top: 40px;
+}
+
+/*------- END FIND SPEC FORM SERV BLOCK -------*/
+
+.cases {
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+.cases-cat {
+  justify-content: center;
+  align-items: center;
+  padding: 5px 10px;
+  gap: 10px;
+  height: fit-content;
+  width: fit-content;
+  display: flex;
+  flex-wrap: nowrap;
+  margin: 5px;
+  background: rgba(78, 52, 135, 0.2);
+  border-radius: 5px;
+  font-size: 14px;
+  line-height: 17px;
+}
+
+.other-serv-blocks {
+  display: flex;
+  gap: 20px;
+}
+
+.other-serv-block {
+  background: #f6f6f6;
+  box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  padding: 40px;
+  width: calc(50% - 10px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.other-serv-block:nth-child(even) {
+  margin-right: 0;
+}
+
+.other-serv-img {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 20px;
+  max-width: 100%;
+  height: 100%;
+}
+
+.other-serv-bg {
+  width: 100%;
+  height: 100%;
+}
+.other-serv-title {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 38px;
+  color: #272727;
+}
+
+.other-serv-desc-text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+  color: #272727;
+}
+
+.top-part {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.sidebar-part {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 40px;
+  gap: 10px;
+
+  width: 380px;
+  height: 426px;
+
+  /* White */
+
+  background: #f6f6f6;
+  /* bg */
+
+  box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
+
+.sidebar-list-item {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+  color: #272727;
+  margin-bottom: 15px;
+}
+
+.sidebar-list-item:hover {
+  color: #4e3487;
+  cursor: pointer;
 }
