--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,6 +43,43 @@ body {
   overflow: hidden;
 }
 
+/*ACCORDION*/
+.panel p {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+  color: #000000;
+  margin-top: 20px;
+}
+
+.faq-item {
+  cursor: pointer;
+  padding: 16px;
+  border: none;
+  text-align: left;
+  outline: none;
+  transition: 0.5s;
+}
+
+.faq-item:after {
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+}
+
+.panel {
+  padding: 0 18px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-out;
+}
+/*ACCORDION*/
+
 /* HEADER AND FOOTER CONTAINER*/
 
 .container {
@@ -1700,12 +1737,7 @@ body {
 
   width: 380px;
   height: 426px;
-
-  /* White */
-
   background: #f6f6f6;
-  /* bg */
-
   box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
 }
